fixed section2 spacing

--- a/src/sec2.css
+++ b/src/sec2.css
@@ -3,7 +3,7 @@
     align-items: center;
     flex-direction: column;
     height: 100vh;
-    min-height: 1000px;
+    min-height: 800px;
     width: auto;
     background: linear-gradient(360deg, #16134f, #000000);
   }
